Excercise - 1 - Installing Service Mesh/policy-api-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: policy-api-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - acctrainings-vikas-gateway
  http:
  - match:
    - uri:
        prefix: /policy
    route:
    - destination:
        host: policy-api
        port:
          number: 8080
